--- a/public/sass/_icons.scss
+++ b/public/sass/_icons.scss
@@ -1,37 +1,48 @@
 @font-face {
-	font-family: 'icomoon';
-	src:url('/icons/icomoon.eot?-axlseu');
-	src:url('/icons/icomoon.eot?#iefix-axlseu') format('embedded-opentype'),
-		url('/icons/icomoon.woff?-axlseu') format('woff'),
-		url('/icons/icomoon.ttf?-axlseu') format('truetype'),
-		url('/icons/icomoon.svg?-axlseu#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'icomoon';
+  src:  url('../icons/icomoon.eot?ccghos');
+  src:  url('../icons/icomoon.eot?ccghos#iefix') format('embedded-opentype'),
+    url('../icons/icomoon.ttf?ccghos') format('truetype'),
+    url('../icons/icomoon.woff?ccghos') format('woff'),
+    url('../icons/icomoon.svg?ccghos#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'icomoon';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-hat:before {
+  content: "\e900";
+}
+.icon-mug:before {
+  content: "\e901";
+}
+.icon-shirt:before {
+  content: "\e902";
+}
 .icon-disk:before {
-	content: "\e600";
+  content: "\e600";
 }
 .icon-facebook:before {
-	content: "\e601";
+  content: "\e601";
 }
 .icon-twitter:before {
-	content: "\e602";
+  content: "\e602";
 }
 .icon-spinner:before {
-	content: "\e603";
+  content: "\e603";
 }
+
