--- a/public/sass/pokedraw.scss
+++ b/public/sass/pokedraw.scss
@@ -198,10 +198,12 @@ $header-height-desktop: 140px;
 
 .hero {
     margin: 0 0 10px;
+    color: #333;
+    text-align: center;
 
     h1 {
-        color: #333;
-        text-align: center;
+        display: inline-block;
+        
         font-size: 3em;
         line-height: 1.25em;
 
@@ -214,6 +216,20 @@ $header-height-desktop: 140px;
         } 
     }
     
+    h2 {
+        display: inline-block;
+
+        font-size: 2.5em;
+        line-height: 1.25em;
+
+        @media #{$mq-tablet} {
+           font-size: 2em;
+        }
+
+        @media #{$mq-phone-landscape} {
+           font-size: 1.5em;
+        }
+    }
 
 }
 
@@ -583,12 +599,14 @@ $header-height-desktop: 140px;
 
 
 .buy-button {
-    @include button(#76c038, #306901);
+    @include button(#325BC5, darken(#325BC5, 20%));
     display: inline-block;
     padding: 10px;
+    margin: 0 12px;
     font-size: 1.5em;
 
-    .icon-shirt {
+    [class^="icon-"] {
+
         font-size: 1.25em;
         vertical-align: middle;
 
